Fix spacing issue with list item icons

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,3 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
-
-.MuiListItemIcon-root-249 {
-  margin-right: 0 !important;
-}
